--- a/index.html
+++ b/index.html
@@ -67,10 +67,29 @@
             </div>
             <div class="col-lg-6 col-md-6 px-lg-0">
               <div class="banner-right-img">
+                <div class="circle pulse orange"></div>
                 <img src="images/rk.jpg" alt="banner" class="w-100 img-fluid">
                 <div class="banner-overlay">
                   <div class="icon-img">
-                    <img src="images/icon.png" alt="icon">
+                    <!-- <div class="circle pulse orange"></div> -->
+                    <!-- <img src="images/icon.png" alt="icon"> -->
+                    <svg class="playbutton-icon" xmlns="http://www.w3.org/2000/svg" width="110" height="110" viewBox="0 0 194 194" fill="none">
+                      <g filter="url(#filter0_d_1_22)">
+                      <circle cx="97.1321" cy="87.1321" r="46.6981" fill="#FFBD2F"/>
+                      </g>
+                      <path d="M113.642 87.1321L88.8774 101.43L88.8774 72.8345L113.642 87.1321Z" fill="white"/>
+                      <defs>
+                      <filter id="filter0_d_1_22" x="0.43396" y="0.43396" width="193.396" height="193.396" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                      <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                      <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                      <feOffset dy="10"/>
+                      <feGaussianBlur stdDeviation="25"/>
+                      <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.08 0"/>
+                      <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_1_22"/>
+                      <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_1_22" result="shape"/>
+                      </filter>
+                      </defs>
+                      </svg>
                   </div>
                 </div>
               </div>
